cleaning up the structure